# memory-gate-rs

./: .cz.toml  .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  REUSE-DEBT.md  REUSE.toml
.claude/kickoffs/: README.md
.github/: dependabot.yml
.github/workflows/: ci.yml  close-issues-on-main.yml  commitizen.yml  fleet-ci.yml  release.yml
benches/: storage_benchmarks.rs  vector_storage_benchmarks.rs  vsa_benchmarks.rs
docs/: DEBT.md  ROADMAP.md  TERO_INTEGRATION.md  WAVE_C_ACCEPTANCE.md
docs/tero-index/: INDEX.md  MANIFEST.toml  index.json
examples/: basic_usage.rs  custom_adapter.rs  holographic_memory.rs  memory-gate.code-workspace  memory_agent.rs
scripts/: check.sh
src/: error.rs  gateway.rs  lib.rs  metrics.rs  traits.rs  types.rs
src/adapters/: mod.rs  passthrough.rs
src/agents/: base.rs  mod.rs
src/embedding/: cache.rs  mod.rs
src/eval/: mod.rs
src/facade/: mod.rs
src/storage/: in_memory.rs  mod.rs  qdrant.rs  sqlite_vec.rs
src/vsa/: codebook.rs  holographic_store.rs  mod.rs  ops.rs  vector.rs
tests/: consolidation_tests.rs  gateway_tests.rs  golden_recall.rs  storage_tests.rs
tests/fixtures/: golden_corpus.json
